--- a/client/index.html
+++ b/client/index.html
@@ -53,6 +53,14 @@
                   <select class="form-control" ng-model="count" ng-options="value for value in countOptions"></select>
               </div>
               
+              <div class="form-group">
+                  <input type="checkbox" ng-model="languageFilterActive"/>
+                  <label>Enable language filter?</label>
+                  <select class="form-control" ng-model="language" ng-disabled="!languageFilterActive">
+                    <option ng-repeat="(key , value) in languageOptions" value="{{key}}">{{value}}</option>
+                  </select>
+              </div>
+              
               <div class="checkbox">
                   <label>
                       <input type="checkbox" ng-model="verbose"/> Verbose output
