sentiment class diagramm added timestamp to tweet info

--- a/client/index.html
+++ b/client/index.html
@@ -151,6 +151,7 @@
           <p>Gelbe Rüam Wurschtsolod boarischer hoam, eana Broadwurschtbudn wea nia ausgähd, kummt nia hoam Trachtnhuat kloan resch! Wo hi sei a ganze weida, hoid. Schnacksln in da Schdeckalfisch ja, wo samma denn. Schdarmbeaga See Sauakraud koa Wurschtsolod Schdeckalfisch, spernzaln boarischer auf gehds beim Schichtl. </p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
           <nvd3 options="diagrams.general.options" data="diagrams.general.data" api="api"></nvd3>
+          <nvd3 options="diagrams.donut.options" data="diagrams.donut.data"></nvd3>
        </div>
 
       </div>
