--- a/client/index.html
+++ b/client/index.html
@@ -147,11 +147,13 @@
           </div>
         </div>
         <div class="col-md-6">
-          <h2>Heading</h2> 
-          <p>Gelbe Rüam Wurschtsolod boarischer hoam, eana Broadwurschtbudn wea nia ausgähd, kummt nia hoam Trachtnhuat kloan resch! Wo hi sei a ganze weida, hoid. Schnacksln in da Schdeckalfisch ja, wo samma denn. Schdarmbeaga See Sauakraud koa Wurschtsolod Schdeckalfisch, spernzaln boarischer auf gehds beim Schichtl. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <h2>Charts</h2>
+          <h3>Sentiment</h3> 
           <nvd3 options="diagrams.general.options" data="diagrams.general.data" api="api"></nvd3>
+          <h3>Sentiment distribution</h3>
           <nvd3 options="diagrams.donut.options" data="diagrams.donut.data"></nvd3>
+          <h3>Tweets by time</h3>
+          <nvd3 options="diagrams.time.options" data="diagrams.time.data"></nvd3>
        </div>
 
       </div>
