bug fixes in the model selection switch statement. added method to test all models in one command: 'tata' also removed the tweet id since its no link anymore and did not work

--- a/client/index.html
+++ b/client/index.html
@@ -126,7 +126,7 @@
               <ol>
                   <li ng-repeat="tweet in verboseTweets">
                
-                      <h4>Tweet #{{tweet.id}} from <a href="https://twitter.com/{{tweet.author}}">@{{tweet.author}}</a></h4>
+                      <h4>Tweet from <a href="https://twitter.com/{{tweet.author}}">@{{tweet.author}}</a></h4>
                       Original: <pre>{{tweet.original}}</pre>
                       Processed: <pre>{{tweet.processed}}</pre>
                       <p>Weight: {{tweet.weight}}, Retweets: {{tweet.retweets}}, Favorites: {{tweet.favorites}}</p>
