--- a/client/index.html
+++ b/client/index.html
@@ -31,9 +31,9 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Hello, TU Vienna!</h1>
+        <h1>Hello, valued customer!</h1>
         <p>
-            Bavaria ipsum dolor sit amet oamoi Buam griasd eich midnand! Glacht i hob di narrisch gean i bin a woschechta Bayer, Zidern Sauakraud a. Gfreit mi Sauwedda is des liab, griaß God beinand Ramasuri jo mei wia da Buachbinda Wanninger Steckerleis gwiss! Enzian jedza is pfundig i waar soweid Griasnoggalsubbm, Spotzerl singd! Greichats Hemad Ledahosn!
+            In the following form, you can query our sentiment analysis tool to get an impression on how your company is doing in the social web. Just enter the keywords you are searching and press "Analyse". If you leave check "verbose output", you can even see all raw data that is analysed! If you are under the impression that results are wrong, please try another classifier.
         </p>
         <!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p> -->
       </div>
@@ -49,7 +49,7 @@
               <div class="form-group">
                   <div class="input-group">
                       <div class="input-group-addon">Query for:</div>
-                      <input type="text" class="form-control" id="sentimentInput" placeholder="Christmas" ng-model="query">
+                      <input type="text" class="form-control" id="sentimentInput" placeholder="TUWien" ng-model="query">
                   </div>
               </div>
               
